fix: spacing

--- a/src/index.css
+++ b/src/index.css
@@ -287,7 +287,7 @@ nav {
 
 .font-btn-section {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 
